crates/safix/src/snapshots/safix__reporter__tests__plain-scaffold_declined.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: aborted; nothing was written
