crates/safix/src/snapshots/safix__reporter__tests__plain-scaffold_exists.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: safix/users/dee.nix already exists but declares no user; resolve that by hand before scaffolding over it
