crates/safix/src/snapshots/safix__reporter__tests__plain-secret_unreadable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: could not read the value
