crates/safix/src/snapshots/safix__reporter__tests__plain-sops_create_failed.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: sops could not create secrets/safix/users/ana/secrets.yaml:
Failed to get the data key: no key could be obtained
