crates/safix/src/snapshots/safix__reporter__tests__plain-sops_key_index.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: could not build the extraction index for 'ops_tooling': invalid unicode code point
