crates/safix/src/snapshots/safix__reporter__tests__plain-sops_pipe_missing.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: sops produced no readable output
