crates/safix/src/snapshots/safix__reporter__tests__plain-sops_unavailable.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: could not run sops
