crates/safix/src/snapshots/safix__reporter__tests__plain-source_has_no_value_generated.snap
---
source: crates/safix/src/reporter.rs
expression: render_plain(&refusal)
---
safix: the mapping 'wg-key' exports wg-private for alice, which holds no value yet.

secrets/safix/users/alice/secrets.yaml does not carry the key. Evaluation could not have caught this: an
entry declares where a value lives, not that one is there, and the two
are the same declaration until something reads the file.

Put a value there first:

    safix generate alice wg-private

or, if this value is not to be minted after all, set it by hand:

    safix set alice wg-private
